--- a/WpfApp2/App.xaml
+++ b/WpfApp2/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="WpfApp2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApp2">
+             xmlns:local="clr-namespace:WpfApp2"
+             Startup="OnStartup">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
